Add code for pytorch tutorial

--- a/Tensors_1.ipynb
+++ b/Tensors_1.ipynb
@@ -23,7 +23,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.6.8"
+      "version": "3.6.9-final"
     }
   },
   "cells": [
@@ -39,52 +39,51 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "IkXveXITKBst",
-        "colab_type": "code",
-        "colab": {}
-      },
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "0ipN4cH3zsO8"
-      },
-      "source": [
-        "## zeros()"
+        "import torch"
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "z_fJogRyKDr0",
-        "colab_type": "code",
-        "colab": {}
-      },
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "## zeros()\n",
+        "w = torch.zeros(4,3)"
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "gVdaTJb-KDkE",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "torch.Size([4, 3])"
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
+      "source": [
+        "w.size()"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 0,
-      "outputs": []
+      "metadata": {
+        "colab": {},
+        "colab_type": "code",
+        "id": "gVdaTJb-KDkE"
+      },
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -98,42 +97,45 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "1_Q-KIOPKK78",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "torch.Size([4, 3])"
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
-      "execution_count": 0,
-      "outputs": []
+      "source": [
+        "w.shape"
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "z1_a3ed1KK49",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
       "execution_count": 0,
-      "outputs": []
+      "metadata": {
+        "colab": {},
+        "colab_type": "code",
+        "id": "z1_a3ed1KK49"
+      },
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "K_yYV8EtKKzU",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "K_yYV8EtKKzU"
       },
+      "outputs": [],
       "source": [
         ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -147,42 +149,52 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "pElZxDIKKPoc",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "tensor([[ 1.3178,  0.5578,  0.7739],\n        [-0.5338, -0.8700, -0.8359],\n        [-0.4803,  2.6798, -0.4414],\n        [ 0.1098, -0.0569, -0.3804]])"
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
-      "execution_count": 0,
-      "outputs": []
+      "source": [
+        "w = torch.randn(4,3)\n",
+        "w"
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "LDzpInhlKPl0",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "tensor([[ 0.1050,  0.9530,  0.4627],\n        [ 1.3056,  0.6939,  0.7064],\n        [-0.9131, -0.7951, -0.6855],\n        [-1.0356, -0.4640,  0.6979]])"
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
-      "execution_count": 0,
-      "outputs": []
+      "source": [
+        "t = torch.randn_like(w)\n",
+        "t"
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "Vx_9rDU4KPiE",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
       "execution_count": 0,
-      "outputs": []
+      "metadata": {
+        "colab": {},
+        "colab_type": "code",
+        "id": "Vx_9rDU4KPiE"
+      },
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -196,42 +208,45 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "YH1cBgIoKXGr",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "tensor([[1., 1., 1.],\n        [1., 1., 1.],\n        [1., 1., 1.],\n        [1., 1., 1.]])"
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
-      "execution_count": 0,
-      "outputs": []
+      "source": [
+        "w.fill_(1)"
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "e8B5NyXJKXAS",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
       "execution_count": 0,
-      "outputs": []
+      "metadata": {
+        "colab": {},
+        "colab_type": "code",
+        "id": "e8B5NyXJKXAS"
+      },
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "f1bdHKbDKW5S",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "f1bdHKbDKW5S"
       },
+      "outputs": [],
       "source": [
         ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -245,42 +260,50 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "8SVsRZWjV6YX",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "tensor([[1., 1., 1., 1.],\n        [1., 1., 1., 1.],\n        [1., 1., 1., 1.]])"
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
-      "execution_count": 0,
-      "outputs": []
+      "source": [
+        "w.view(3,4)"
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "rRjvqiWBVhKH",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "tensor([[1., 1., 1., 1.],\n        [1., 1., 1., 1.],\n        [1., 1., 1., 1.]])"
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
-      "execution_count": 0,
-      "outputs": []
+      "source": [
+        "w.view(3,-1)"
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "4Le5ZoASVgsw",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
       "execution_count": 0,
-      "outputs": []
+      "metadata": {
+        "colab": {},
+        "colab_type": "code",
+        "id": "4Le5ZoASVgsw"
+      },
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -294,42 +317,43 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "VbXZYL6uWCD4",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "array([[1., 1., 1.],\n       [1., 1., 1.],\n       [1., 1., 1.],\n       [1., 1., 1.]], dtype=float32)"
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
-      "execution_count": 0,
-      "outputs": []
+      "source": [
+        "w.numpy()"
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "YL0za74iWBsn",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
       "execution_count": 0,
-      "outputs": []
+      "metadata": {
+        "colab": {},
+        "colab_type": "code",
+        "id": "YL0za74iWBsn"
+      },
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "vHPIyb8EWBkP",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
       "execution_count": 0,
-      "outputs": []
+      "metadata": {
+        "colab": {},
+        "colab_type": "code",
+        "id": "vHPIyb8EWBkP"
+      },
+      "outputs": [],
+      "source": []
     }
   ]
 }
